--- a/index.html
+++ b/index.html
@@ -63,43 +63,37 @@
         <div class="projeto">
             <img src="img/Cadastro.PNG" alt="Projeto 1">
             <h3>Projeto 1</h3>
-            <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Nunc fringilla 
-                justo et sapien tempor, eget egestas nulla consectetur.</p>
+            <p>Formúlario de página de Cadastro apenas com HTML5 e CSS3</p>
         </div>
         <div class="projeto">
             <img src="img/Calculadora.PNG" alt="Projeto 2">
             <h3>Projeto 2</h3>
-            <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Nunc fringilla 
-                justo et sapien tempor, eget egestas nulla consectetur.</p>
+            <p>Calcúladora de IMC</p>
         </div>
         <div class="projeto">
             <img src="img/Cronometro.PNG" alt="Projeto 3">
             <h3>Projeto 3</h3>
-            <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Nunc fringilla 
-                justo et sapien tempor, eget egestas nulla consectetur.</p>
+            <p>Cronômetro usando </p>
         </div>
         <div class="projeto">
             <img src="img/jogo.PNG" alt="Projeto 4">
             <h3>Projeto 4</h3>
-            <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Nunc fringilla 
-                justo et sapien tempor, eget egestas nulla consectetur.</p>
+            <p>Jogo da memória usando JavaScript</p>
         </div>
         <div class="projeto">
             <img src="img/Restaurante.PNG" alt="Projeto 5">
             <h3>Projeto 5</h3>
-            <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Nunc fringilla 
-                justo et sapien tempor, eget egestas nulla consectetur.</p>
+            <p>Site de Restaurante</p>
         </div>
 
         <div class="projeto">
             <img src="img/Quiz.PNG" alt="Projeto 6">
             <h3>Projeto 5</h3>
-            <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Nunc fringilla 
-                justo et sapien tempor, eget egestas nulla consectetur.</p>
+            <p>Quiz com JavaScript</p>
         </div>
     </section>
 
-
+     <div class="contato">
     <h2>Contato</h2>
     <section id="contato" >
     
@@ -108,7 +102,7 @@
         <a href="https://www.linkedin.com/in/rayane-lais-4a41b7291/"><img src="img/linkedin.png"></a>
         <a href="https://wa.me/5511956382911"><img src="img/whatsapp.png"></a>
     </section>
-
+</div>
     <footer>
         <p>&copy; 2023 Rayane Lais</p>
     </footer>
